--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,9 +12,9 @@
     "axios": "^1.9.0",
     "js-cookie": "^3.0.5",
     "json-server": "^1.0.0-beta.3",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0"
   },
